--- a/src/libnm-core-public/nm-version-macros.h.in
+++ b/src/libnm-core-public/nm-version-macros.h.in
@@ -83,15 +83,15 @@
 
 /* For releases, NM_API_VERSION is equal to NM_VERSION.
  *
- * For development builds, NM_API_VERSION is the next
- * stable API after NM_VERSION. When you run a development
+ * For development and RC builds, NM_API_VERSION is the next
+ * stable API after NM_VERSION. When you run a devel or RC
  * version, you are already using the future API, even if
  * it is not yet released. Hence, the currently used API
  * version is the future one.  */
 #define NM_API_VERSION                                                  \
     (((NM_MINOR_VERSION % 2) == 1)                                      \
          ? NM_ENCODE_VERSION(NM_MAJOR_VERSION, NM_MINOR_VERSION + 1, 0) \
-         : NM_ENCODE_VERSION(NM_MAJOR_VERSION, NM_MINOR_VERSION, NM_MICRO_VERSION + 1))
+         : NM_VERSION)
 
 /* deprecated. */
 #define NM_VERSION_CUR_STABLE NM_API_VERSION
