--- a/src/core/bpf/meson.build
+++ b/src/core/bpf/meson.build
@@ -97,6 +97,7 @@ endif
 bpf_clang_flags = [
   '-std=gnu17',
   '-Wunused',
+  '-Wimplicit-fallthrough',
   '-Wno-compare-distinct-pointer-types',
   '-fno-stack-protector',
   '-O2',
@@ -109,6 +110,7 @@ bpf_clang_flags = [
 bpf_gcc_flags = [
   '-std=gnu17',
   '-Wunused',
+  '-Wimplicit-fallthrough',
   '-fno-stack-protector',
   '-fno-ssa-phiopt',
   '-O2',
