core: dlopen symbols from libbpf (wip)
Load at runtime symbols from libbpf only when needed. In this way,
NetworkManager can work without the dependency (e.g. in the initrd
where we want to keep the image small).

--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -37,8 +37,7 @@ subdir('bpf')
 base_sources_addon = []
 base_deps_addon = []
 if enable_clat
-  base_sources_addon += [clat_skel_h]
-  base_deps_addon += [libbpf]
+  base_sources_addon += [clat_skel_h, 'bpf/nm-bpf-syms.c']
 endif
 
 libNetworkManagerBase = static_library(
